# mind_journal

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.test.yml
src/backend/auth/: Dockerfile  alembic.ini  main.py  pyproject.toml
src/backend/auth/config/: __init__.py  logging_config.py  password_hasher_config.py
src/backend/auth/controller/: auth_controller.py
src/backend/auth/dto/: base.py  request.py  response.py
src/backend/auth/enums/: __init__.py  enums.py
src/backend/auth/exceptions/: __init__.py
src/backend/auth/factories/: __init__.py  auth_repository_factory.py  cache_factory.py  geo_ip_service_factory.py  service_factory.py
src/backend/auth/proto/: __init__.py  auth.proto  auth_pb2.pyi  auth_pb2_grpc.py
src/backend/auth/protocols/: __init__.py  auth_repository.py  auth_service.py  geo_ip_service.py
src/backend/auth/repository/: __init__.py  auth_repository.py  models.py
src/backend/auth/security/: __init__.py  security.py
src/backend/auth/service/: __init__.py  auth_service.py  geo_ip_service.py
src/backend/auth/settings/: settings.py
src/backend/auth/tests/: conftest.py  mocks.py  pytest.ini
src/backend/auth/utils/: __init__.py  cache_keys.py  utils.py
src/backend/gateway/: .dockerignore  Dockerfile  main.py  pyproject.toml
src/backend/gateway/adapters/: __init__.py  auth_grpc_adapter.py  base_adapter.py  mail_kafka_adapter.py  wellness_grpc_adapter.py
src/backend/gateway/config/: __init__.py  cors_config.py  logging_config.py  openapi_config.py  prometheus_config.py
src/backend/gateway/controller/: __init__.py  health_controller.py
src/backend/gateway/dto/: auth_dto.py  base_dto.py  mail_dto.py  wellness_dto.py
src/backend/gateway/enums/: __init__.py  enums.py
src/backend/gateway/facades/: __init__.py  application_facade.py  auth_facade.py  wellness_facade.py
src/backend/mail/: Dockerfile  main.py  pyproject.toml
src/backend/mail/dto/: dto.py  (+3 more)
src/backend/wellness/: Dockerfile  demo_generator.py  main.py  pyproject.toml
(+347 files in other folders)
