[project]
name = "mail"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "aiokafka[lz4]==0.13.0",
    "aiosmtplib==5.1.0",
    "msgspec>=0.20.0",
    "prometheus-client==0.24.1",
    "uvicorn[standard]==0.40.0",
]

[dependency-groups]
test = [
    "coverage==7.13.3",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
]
